fix bg on light/dark mode

--- a/assets/css/text.css
+++ b/assets/css/text.css
@@ -7,6 +7,8 @@ a {
 }
 
 html {
-  @apply bg-neutral-900;
-  color-scheme: dark;
+  @apply bg-neutral-100 dark:bg-neutral-900;
+  @media (prefers-color-scheme: dark) {
+    color-scheme: dark;
+  }
 }
